--- a/index.html
+++ b/index.html
@@ -11,53 +11,78 @@
   <div class="side_panel">
     <div id="side_top"></div>
     <div id="side_logo">
-      <p>
-        <img id="odin_image" src="odin.png" alt="Odin logo"> 
+      <div id="side_logo_image">
+        <p id ="odin_image_box">
+          <img id="odin_image" src="odin.png" alt="Odin logo"> 
+        </p>
         <p id="odin_text">ODIN</p>
-      </p>
+      </div>
     </div>
     <div id="side_bottom"></div>
   </div>
   <div id="form">
-    <div id="form_text">
-      <p>This is not a real online service! You know you need 
-        something like this in your life to help you realize your deepest dreams. 
-        Sign up <span class="italic">now</span> to get started.
-      </p>
-      <p> You <span class="italic">know</span> you want to.</p>
-    </div>
-    <div id="form_input">
-      <div id="form_top_text">Let's do this!</div>
-      <div id="form_name">
-        <p class="userinput">
-          <label for="firstname">
-            <span>First Name</span>
-          </label>
-          <input type="text" id="firstname" name="firstname" required>
+    <div id="form_background1">
+      <div id="form_text">
+        <p>This is not a real online service! You know you need 
+          something like this in your life to help you realize your deepest dreams. 
+          Sign up <span class="italic">now</span> to get started.
         </p>
-        <p class="userinput">
-        <label for="lastname">
-          <span>Last Name</span>
-        </label>
-        <input type="text" id="lastname" name="lastname" required>
-        </p>
-      </div>
-      <div id="form_contact">
-        <p class="userinput">
-          <label for="email">
-            <span>Email</span>
-          </label>
-          <input type="email" id="email" name="email" required>
-        </p>
-        <p class="userinput">
-          <label for="phone">
-            <span>Phone Number</span>
-          </label>
-          <input type="tel" id="phone" name="phone" required>
-        </p>
+        <p> You <span class="italic">know</span> you want to.</p>
       </div>
     </div>
-    <div id="form_button"></div>
+    <div id="form_background2">
+      <div id="form_input">
+        <div id="form_top_text">Let's do this!</div>
+        <div id="form_name">
+          <p class="userinput">
+            <label for="firstname">
+              <span>First Name</span>
+            </label>
+            <input type="text" id="firstname" name="firstname" required>
+          </p>
+          <p class="userinput">
+          <label for="lastname">
+            <span>Last Name</span>
+          </label>
+          <input type="text" id="lastname" name="lastname" required>
+          </p>
+        </div>
+        <div id="form_contact">
+          <p class="userinput">
+            <label for="email">
+              <span>Email</span>
+            </label>
+            <input type="email" id="email" name="email" required>
+          </p>
+          <p class="userinput">
+            <label for="phone">
+              <span>Phone Number</span>
+            </label>
+            <input type="tel" id="phone" name="phone" required>
+          </p>
+        </div>
+        <div id="form_password">
+          <p class="userinput">
+            <label for="password">
+              <span>Password</span>
+            </label>
+            <input type="password" id="password" name="password" required>
+          </p>
+          <p class="userinput">
+            <label for="password_confirm">
+              <span>Confirm Password</span>
+            </label>
+            <input type="password" id="password_confirm" name="password_confirm" required>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div id="form_background3"></div>
+      <div id="form_button">
+        <button type="button">Create Account</button>
+        <p>Already have an account?<span class="green">Log in</span></p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
