--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <input type="password" id="password_confirm" name="password_confirm" required>
           </p>
         </div>
+        <div id="password_error"></div>
       </div>
     </div>
     <div id="form_background3"></div>
